# heart-attack-prediction

./: README.md  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/about/: page.tsx
app/components/: Navbar.tsx
app/howtouse/: page.tsx
app/predict/: page.tsx
backend/: Medicaldataset_cleaned_final.csv  app.py  heart_attack_model.pkl  pyproject.toml  requirements.txt
